{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 117,
  "lineage": "625ae442-8a54-d420-abea-efe373f919b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:security-group/sg-02f6e80f54af9697b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f6e80f54af9697b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "petplantr-alb-2025090517465579690000000a",
            "name_prefix": "petplantr-alb-",
            "owner_id": "680604703891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petplantr-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-alb-sg",
              "Owner": "DevOps",
              "Project": "PetPlantr"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:security-group/sg-0a1dac376bfc5df5d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1dac376bfc5df5d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000907fbbf4a3168d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "petplantr-rds-20250905174659065700000018",
            "name_prefix": "petplantr-rds-",
            "owner_id": "680604703891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petplantr-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-rds-sg",
              "Owner": "DevOps",
              "Project": "PetPlantr"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "petplantr-production-models-09xjs8du",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:680604703891:loadbalancer/app/petplantr-production/1e289c06ef72564a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "petplantr-production",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02f6e80f54af9697b",
              "sg-059855874d41c5335"
            ],
            "subnets": [
              "subnet-01f86266805df13b7",
              "subnet-03bed585e0b15a5b9",
              "subnet-074db6515e6c607af"
            ],
            "tags": {
              "Environment": "production",
              "Name": "petplantr-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production",
              "Owner": "DevOps",
              "Project": "PetPlantr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "xff_header_processing_mode": "append"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.alb.aws_security_group.this",
            "module.s3_bucket.aws_s3_bucket.this",
            "module.s3_bucket.aws_s3_bucket_policy.this",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680604703891:targetgroup/petp-2025090517465717450000000f/63cb4b79382e8585",
            "arn_suffix": "targetgroup/petp-2025090517465717450000000f/63cb4b79382e8585",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680604703891:targetgroup/petp-2025090517465717450000000f/63cb4b79382e8585",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "petp-2025090517465717450000000f",
            "name_prefix": "petp-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "petp-"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petp-",
              "Owner": "DevOps",
              "Project": "PetPlantr"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:security-group/sg-059855874d41c5335",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-059855874d41c5335",
            "ingress": [],
            "name": "petplantr-production-2025090517465717100000000e",
            "name_prefix": "petplantr-production-",
            "owner_id": "680604703891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "petplantr-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production",
              "Owner": "DevOps",
              "Project": "PetPlantr"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:security-group/sg-0a19fe17683ba567c",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a19fe17683ba567c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000907fbbf4a3168d"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000907fbbf4a3168d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "petplantr-production-cluster-2025090517465706690000000c",
            "name_prefix": "petplantr-production-cluster-",
            "owner_id": "680604703891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "petplantr-production-cluster"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-cluster",
              "Owner": "DevOps",
              "Project": "PetPlantr"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:security-group/sg-000907fbbf4a3168d",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000907fbbf4a3168d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a19fe17683ba567c"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a19fe17683ba567c"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a19fe17683ba567c"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a19fe17683ba567c"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a19fe17683ba567c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a19fe17683ba567c"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "petplantr-production-node-2025090517465713270000000d",
            "name_prefix": "petplantr-production-node-",
            "owner_id": "680604703891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "petplantr-production-node",
              "kubernetes.io/cluster/petplantr-production": "owned"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-node",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-776601622",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a19fe17683ba567c",
            "security_group_rule_id": "sgr-0a3f285e940086c61",
            "self": false,
            "source_security_group_id": "sg-000907fbbf4a3168d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 1025,
            "id": "sgrule-4166427924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a19fe17683ba567c",
            "security_group_rule_id": "sgr-00ec0869d4ffcdf4e",
            "self": false,
            "source_security_group_id": "sg-000907fbbf4a3168d",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-156459123",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-0943c5e84a4c0a16f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2282133745",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-0649ec0f50587e9e8",
            "self": false,
            "source_security_group_id": "sg-0a19fe17683ba567c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3486841876",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-074a1faf2b1720d25",
            "self": false,
            "source_security_group_id": "sg-0a19fe17683ba567c",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-110533506",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-0d6eca3e91ae53928",
            "self": false,
            "source_security_group_id": "sg-0a19fe17683ba567c",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-365602723",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-0186ef8adb6bc0331",
            "self": false,
            "source_security_group_id": "sg-0a19fe17683ba567c",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1902875752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-0392fb7e790284d9a",
            "self": false,
            "source_security_group_id": "sg-0a19fe17683ba567c",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-493145760",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-0068800a39e88b49d",
            "self": false,
            "source_security_group_id": "sg-0a19fe17683ba567c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1887938561",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-0f0e04456693cb90b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-4115869533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-0179b17946d7d3e98",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3138617750",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-0cdd3c312bda7703b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-525083257",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-000907fbbf4a3168d",
            "security_group_rule_id": "sgr-06f8251a93a10bc72",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:network-acl/acl-0aa8ff54677adc058",
            "default_network_acl_id": "acl-0aa8ff54677adc058",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0aa8ff54677adc058",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "680604703891",
            "subnet_ids": [
              "subnet-01f86266805df13b7",
              "subnet-03bed585e0b15a5b9",
              "subnet-074db6515e6c607af",
              "subnet-088afd81deeef712e",
              "subnet-0a30cefe55af68d1b",
              "subnet-0af58c3f2fcd45073"
            ],
            "tags": {
              "Name": "petplantr-production-default",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-default",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:route-table/rtb-02f46275a78e032ed",
            "default_route_table_id": "rtb-02f46275a78e032ed",
            "id": "rtb-02f46275a78e032ed",
            "owner_id": "680604703891",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "petplantr-production-default",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-default",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:security-group/sg-0bae5266b55058dbb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bae5266b55058dbb",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "680604703891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petplantr-production-default",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-default",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6d98f8392acc4e2",
            "arn": "arn:aws:ec2:us-east-1:680604703891:elastic-ip/eipalloc-0e6d98f8392acc4e2",
            "association_id": "eipassoc-04164f0b0910818ea",
            "domain": "vpc",
            "id": "eipalloc-0e6d98f8392acc4e2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09ffa407ac3e67097",
            "private_dns": "ip-10-0-101-55.ec2.internal",
            "private_ip": "10.0.101.55",
            "public_dns": "ec2-3-211-88-189.compute-1.amazonaws.com",
            "public_ip": "3.211.88.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petplantr-production-us-east-1a",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-us-east-1a",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e9e77001a486193",
            "arn": "arn:aws:ec2:us-east-1:680604703891:elastic-ip/eipalloc-04e9e77001a486193",
            "association_id": "eipassoc-0c0887354978efad7",
            "domain": "vpc",
            "id": "eipalloc-04e9e77001a486193",
            "network_border_group": "us-east-1",
            "network_interface": "eni-029210e596beb46c8",
            "private_dns": "ip-10-0-102-181.ec2.internal",
            "private_ip": "10.0.102.181",
            "public_dns": "ec2-13-223-156-188.compute-1.amazonaws.com",
            "public_ip": "13.223.156.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petplantr-production-us-east-1b",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-us-east-1b",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026f5f114cc84430a",
            "arn": "arn:aws:ec2:us-east-1:680604703891:elastic-ip/eipalloc-026f5f114cc84430a",
            "association_id": "eipassoc-00d941cd49d31553f",
            "domain": "vpc",
            "id": "eipalloc-026f5f114cc84430a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bd7b719f54d5a92a",
            "private_dns": "ip-10-0-103-140.ec2.internal",
            "private_ip": "10.0.103.140",
            "public_dns": "ec2-52-73-233-119.compute-1.amazonaws.com",
            "public_ip": "52.73.233.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "petplantr-production-us-east-1c",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-us-east-1c",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:internet-gateway/igw-01c0a45a610a0f993",
            "id": "igw-01c0a45a610a0f993",
            "owner_id": "680604703891",
            "tags": {
              "Name": "petplantr-production",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6d98f8392acc4e2",
            "association_id": "eipassoc-04164f0b0910818ea",
            "connectivity_type": "public",
            "id": "nat-01b25a44f73b1f993",
            "network_interface_id": "eni-09ffa407ac3e67097",
            "private_ip": "10.0.101.55",
            "public_ip": "3.211.88.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01f86266805df13b7",
            "tags": {
              "Name": "petplantr-production-us-east-1a",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-us-east-1a",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e9e77001a486193",
            "association_id": "eipassoc-0c0887354978efad7",
            "connectivity_type": "public",
            "id": "nat-0f9c27ec3c3489a76",
            "network_interface_id": "eni-029210e596beb46c8",
            "private_ip": "10.0.102.181",
            "public_ip": "13.223.156.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03bed585e0b15a5b9",
            "tags": {
              "Name": "petplantr-production-us-east-1b",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-us-east-1b",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026f5f114cc84430a",
            "association_id": "eipassoc-00d941cd49d31553f",
            "connectivity_type": "public",
            "id": "nat-0009dcb21639f1895",
            "network_interface_id": "eni-0bd7b719f54d5a92a",
            "private_ip": "10.0.103.140",
            "public_ip": "52.73.233.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-074db6515e6c607af",
            "tags": {
              "Name": "petplantr-production-us-east-1c",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-us-east-1c",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0108510b7842a67e61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01b25a44f73b1f993",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0108510b7842a67e6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a66ed655f79721bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f9c27ec3c3489a76",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a66ed655f79721bd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a7d81a9c9179d9c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0009dcb21639f1895",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7d81a9c9179d9c2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c0a45a610a0f993",
            "id": "r-rtb-0e73b882cf2309c131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e73b882cf2309c13",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:route-table/rtb-0108510b7842a67e6",
            "id": "rtb-0108510b7842a67e6",
            "owner_id": "680604703891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b25a44f73b1f993",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petplantr-production-private-us-east-1a",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-private-us-east-1a",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:route-table/rtb-0a66ed655f79721bd",
            "id": "rtb-0a66ed655f79721bd",
            "owner_id": "680604703891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f9c27ec3c3489a76",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petplantr-production-private-us-east-1b",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-private-us-east-1b",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:route-table/rtb-0a7d81a9c9179d9c2",
            "id": "rtb-0a7d81a9c9179d9c2",
            "owner_id": "680604703891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0009dcb21639f1895",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petplantr-production-private-us-east-1c",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-private-us-east-1c",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:route-table/rtb-0e73b882cf2309c13",
            "id": "rtb-0e73b882cf2309c13",
            "owner_id": "680604703891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c0a45a610a0f993",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petplantr-production-public",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-public",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a8b89182db86544",
            "route_table_id": "rtb-0108510b7842a67e6",
            "subnet_id": "subnet-0af58c3f2fcd45073"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be1a0b756122065a",
            "route_table_id": "rtb-0a66ed655f79721bd",
            "subnet_id": "subnet-088afd81deeef712e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3f54a8ea8db9be0",
            "route_table_id": "rtb-0a7d81a9c9179d9c2",
            "subnet_id": "subnet-0a30cefe55af68d1b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a4c7e3c225c57ad",
            "route_table_id": "rtb-0e73b882cf2309c13",
            "subnet_id": "subnet-01f86266805df13b7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e69570dadaca0129",
            "route_table_id": "rtb-0e73b882cf2309c13",
            "subnet_id": "subnet-03bed585e0b15a5b9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099a7d5734dda3918",
            "route_table_id": "rtb-0e73b882cf2309c13",
            "subnet_id": "subnet-074db6515e6c607af"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:subnet/subnet-0af58c3f2fcd45073",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af58c3f2fcd45073",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680604703891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petplantr-production-private-us-east-1a",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-private-us-east-1a",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:subnet/subnet-088afd81deeef712e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088afd81deeef712e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680604703891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petplantr-production-private-us-east-1b",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-private-us-east-1b",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:subnet/subnet-0a30cefe55af68d1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a30cefe55af68d1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680604703891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petplantr-production-private-us-east-1c",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-private-us-east-1c",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:subnet/subnet-01f86266805df13b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f86266805df13b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680604703891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petplantr-production-public-us-east-1a",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-public-us-east-1a",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:subnet/subnet-03bed585e0b15a5b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bed585e0b15a5b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680604703891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petplantr-production-public-us-east-1b",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-public-us-east-1b",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:subnet/subnet-074db6515e6c607af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074db6515e6c607af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680604703891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "petplantr-production-public-us-east-1c",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production-public-us-east-1c",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04ebe5732464f0829"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680604703891:vpc/vpc-04ebe5732464f0829",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa8ff54677adc058",
            "default_route_table_id": "rtb-02f46275a78e032ed",
            "default_security_group_id": "sg-0bae5266b55058dbb",
            "dhcp_options_id": "dopt-0f9ed18947567fb3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ebe5732464f0829",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f46275a78e032ed",
            "owner_id": "680604703891",
            "tags": {
              "Name": "petplantr-production",
              "kubernetes.io/cluster/petplantr-production": "shared"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "petplantr-production",
              "Owner": "DevOps",
              "Project": "PetPlantr",
              "kubernetes.io/cluster/petplantr-production": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}